[package]
name = "juego"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib", "rlib"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dependencies]
bevy = "0.7"
rand = "0.8.5"
wasm-bindgen = "0.2.87"